app/javascript/components/Environments/style.scss
@import '../../utilities.scss';

.environments-container {
  background-color: #EDEDED;
  width: 100%;
  height: 100%;
  padding: 20px;
}

.environments-container .environments-inner-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 60%;
  height: 45%;
  margin: 30px auto 0 auto;
  border: 1px solid #ddd;
  border-radius: 10px;
}

.environments-container .environments-inner-container .environments-list {
  width: 30%;
  height: 100%;
  overflow-y: scroll;
  direction: rtl;
  overflow-x: hidden;
  display: flex;
  flex-direction: column;
  background-color: #F5F5F5;
  padding: 0 0 0 10px;
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;

  &::-webkit-scrollbar-track {
    background: transparent;
    border-radius: 100px;
  }
}

.environments-container .environments-inner-container .environments-list:hover {
  &::-webkit-scrollbar-thumb {
    visibility: visible;
  }

  /* Track */
  &::-webkit-scrollbar-track {
    background: transparent;
    border-radius: 100px;
  }
}

.environments-container .environments-inner-container .environments-list ul {
  list-style: none;
  display: flex;
  flex-direction: column;
  justify-content: center;
  direction: ltr;
}

.environments-container .environments-inner-container .environments-list ul li {
  width: 100%;
  padding: 20px 0 20px 10px;
  overflow-x: hidden;
  font-weight: 300;
  font-size: 20px;
  color: #303030;
  cursor: pointer;
}

.environments-container .environments-inner-container .environments-list ul li p {
  width: 95%;
  overflow-x: hidden;
  text-overflow: ellipsis;
}

.environments-container .environments-inner-container .environments-list ul .styled {
  border-right: 3px solid $primary_color;
  color: $second_color;
}

.environments-container .environments-inner-container .environments-content {
  width: 70%;
  background-color: #F8F9FC;
  display: flex;
  flex-direction: column;
  padding: 20px;
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
}

.environments-container .environments-inner-container .environments-content .description p {
  font-size: 20px;
  font-weight: 300;
  margin-bottom: 20px;
}

.environments-container .environments-inner-container .environments-content .content-users {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
  overflow-x: scroll;
  padding-bottom: 20px;
  min-height: 132px;
}

.environments-container .environments-inner-container .environments-content .content-users:hover {
  &::-webkit-scrollbar-thumb {
    visibility: visible;
  }
}

::-webkit-scrollbar {
  height: 5px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #F8F9FC;
  border-radius: 10px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: $primary_color;
  border-radius: 10px;
  height: 5px;
  visibility: hidden;
}

.environments-container .environments-inner-container .environments-content .content-users .users {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-right: 20px;
}


.environments-container .environments-inner-container .environments-content .content-users .users p {
  text-align: center;
  font-weight: 300;
  color: #303030;
  margin-top: 5px;
}

.environments-container .environments-inner-container .environments-content .content-users .users button {
  color: #74643F;
  font-size: 12px;
  margin-top: 5px;
  background-color: transparent;
  border: none;
  text-decoration: underline;
  cursor: pointer;
}

.environments-container .environments-inner-container .environments-content .content-users .users div {
  background-color: #c1c9cc;
  width: 64px;
  height: 64px;
  border-radius: 100%;
  display: flex;
}

.environments-container .environments-inner-container .environments-content .content-users .users div img {
  width: 64px;
  height: 64px;
  border-radius: 100%;
}

.environments-container .environments-inner-container .environments-content .content-users .users div #user-photo {
  width: 48px;
  height: 48px;
  color: #fff;
  margin: auto;
  border-radius: 100%;
}

.environments-container .environments-inner-container .environments-content .options {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
}

.environments-container .environments-inner-container .environments-content .options .invite-button {
  width: 100px;
  padding: 10px 15px;
  margin-top: 25px;
  background-color: #00A5CF;
  color: #fff;
  outline: none;
  border: none;
  border-radius: 5px;
  font-size: 16px;
  transition: filter 0.3s;
  cursor: pointer;
}

.environments-container .environments-inner-container .environments-content .options .delete-button {
  width: 100px;
  padding: 10px 15px;
  margin-top: 25px;
  background-color: transparent;
  color: #D72638;
  outline: none;
  border: none;
  border-radius: 5px;
  font-size: 16px;
  transition: filter 0.3s;
  cursor: pointer;
}

.environments-container .environments-inner-container .environments-content .options button:hover {
  filter: brightness(90%);
}

